# halo2-gpu-specific

./: .gitignore  Cargo.toml
halo2_gadgets/: Cargo.toml
halo2_proofs/: Cargo.toml  build.rs
halo2_proofs/benches/: plonk.rs
halo2_proofs/examples/: circuit-layout.rs  lookup_api.rs  lookup_api_set.rs  range-check.rs  shuffle.rs  shuffle_api.rs  shuffle_api_group.rs  simple-example-2.rs  simple-example-3.rs  simple-example.rs  two-chip.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  parallel.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs
halo2_proofs/src/circuit/floor_planner/: flat.rs  single_pass.rs  v1.rs
halo2_proofs/src/circuit/floor_planner/flat/: region.rs
halo2_proofs/src/circuit/floor_planner/v1/: strategy.rs
halo2_proofs/src/dev/: cost.rs  gates.rs  graph.rs  util.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  evaluation_gpu.rs  keygen.rs  logup.rs  lookup.rs  permutation.rs  prover.rs  range_check.rs  shuffle.rs  symbol.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/logup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/shuffle/: prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  msm.rs  multiopen.rs
halo2_proofs/src/poly/multiopen/: gwc.rs  shplonk.rs
halo2_proofs/src/poly/multiopen/gwc/: prover.rs  verifier.rs
halo2_proofs/src/poly/multiopen/shplonk/: prover.rs  verifier.rs
halo2_proofs/tests/: lookup_any.rs  plonk_api.rs
